--- a/MediaServices.Client.Extensions.Tests/MediaServices.Client.Extensions.Tests.csproj
+++ b/MediaServices.Client.Extensions.Tests/MediaServices.Client.Extensions.Tests.csproj
@@ -163,8 +163,8 @@
   <PropertyGroup Label="Nuget">
     <NugetTargetPath>$([System.IO.Path]::GetFullPath($(ProjectDir)\..\.nuget\NuGet.targets)) </NugetTargetPath>
   </PropertyGroup>
-  <Import  Project="$(NugetTargetPath)" Condition="Exists($(NugetTargetPath))" />
-    <Target Name="BeforeBuild">
+  <Import Project="$(NugetTargetPath)" Condition="Exists($(NugetTargetPath))" />
+  <Target Name="BeforeBuild">
   </Target>
   <Target Name="AfterBuild">
   </Target>
@@ -174,4 +174,5 @@
     <Error Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
   </Target>
   <Import Project="$(SlowCheetahTargets)" Condition="Exists('$(SlowCheetahTargets)')" Label="SlowCheetah" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
 </Project>
